# pvgql

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: ci.yml
src/: common.rs  context.rs  custom_scalar.rs  gql.rs  main.rs  models.rs
src/services/: authorDB.rs  comment.rs  editTags.rs  editVideo.rs  getVideo.rs  leaderboard.rs  listVideo.rs  mod.rs  notification.rs  playlist.rs  postvideo.rs  pvsubscription.rs  rating.rs  stats.rs  subscription.rs  tagHistory.rs  tags.rs  users.rs
