[package]
name = "pvgql"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
bson = "1.1.0"
actix-web = "*"
actix-rt = "*"
actix-cors="*"
env_logger = "*"
serde = { version = "1.0.58", features = ["derive"] }
serde_json = "1.0.58"
serde_derive = "1.0.58"
juniper = {version = "0.14.2", features = ["chrono"] }
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
extend = "*"
