[package]
name = "pvgql"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.7"
futures = "0.3.1"
async-trait = "0.1.39"
serde_json = { version = "1" }
fnv = "1.0.3"
tokio = { version = "0.2", features = ["rt-core", "time", "macros"] }

juniper = { git = "https://github.com/graphql-rust/juniper",features = ["expose-test-schema", "serde_json"] }
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
actix-web = "3.3"
actix-cors = "0.5"
env_logger = "0.8"
rand = "0.7"

chrono = { version = "*", features = ["serde"] }
bson = "1.1.0"
actix-rt = "*"
serde = { version = "1.0.58", features = ["derive"] }
serde_derive = "1.0.58"
#juniper = {version = "0.14.2", features = ["chrono"] }
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
extend = "*"
